<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--Type/Auctioneer id/Object/Requirements(Price)-->
    <LinearLayout
        android:background="@color/colorWindowBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context="com.sec.secureapp.activities.CreateAuctionActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/create_auction_type" />

        <Spinner
            android:id="@+id/create_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/create_auction_auctioneer" />

        <TextView
            android:id="@+id/create_auctioneer"
            android:paddingLeft="5dp"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:text="@string/create_auction_object" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/create_choose_object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_auction_choose_object" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:text="@string/create_auction_requirements"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/create_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Duration" />

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingTop="5dp"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:digits="0123456789$€ "
                android:id="@+id/create_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:hint="Initial Price" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:paddingTop="5dp"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/white"
                android:hint="Minimum Participants" />

        </android.support.design.widget.TextInputLayout>


        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/create_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_auction_submit" />

    </LinearLayout>
</layout>